--- a/blocklydemo/src/main/res/layout/split_content.xml
+++ b/blocklydemo/src/main/res/layout/split_content.xml
@@ -15,6 +15,7 @@
     </FrameLayout>
 
     <TextView android:id="@+id/generated_code"
+        android:layout_alignParentRight="true"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_weight="1"
