--- a/blocklydemo/src/main/res/layout/turtle_content.xml
+++ b/blocklydemo/src/main/res/layout/turtle_content.xml
@@ -16,9 +16,12 @@
         <include layout="@layout/blockly_unified_workspace" />
     </RelativeLayout>
 
-    <WebView android:id="@+id/turtle_runtime"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        />
+    <TextView android:id="@+id/generated_code"
+              android:layout_alignParentRight="true"
+              android:layout_width="wrap_content"
+              android:layout_height="match_parent"
+              android:layout_weight="1"
+              android:text="@string/split_generate_message"
+              android:textIsSelectable="true"
+    />
 </LinearLayout>
